Revert "Create index.html"
This reverts commit 7b0524527b8d6efc9aad56dce3d0b069eb67e11b.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<article>
 									<header>
 										<span class="date">April 17, 2023</span>
-										<h2><a href="#">First<br />
+										<h2><a href="#">My First<br />
 											Website</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
