--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<a href="#" class="image fit"><img src="images/pic02.PNG" alt="" /></a>
 									<p>This is a Dashboard created with <strong>Power BI</strong> showing my findings and insights after maniulated the dateset
 										provided by an online retail company. The purpose of this project was to help the company to increase 
-										their customer satisfaction. A presentation has been done in fromt of audience.</p>
+										their customer satisfaction. A presentation has been done in front of audience.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -100,7 +100,7 @@
 									<a href="#" class="image fit"><img src="images/pic04.PNG" alt="" /></a>
 									<p>My first personal project which applied my self-taught data manipulation skills.
 										The Netflix and IMDB dataset have been used and combined to give me insights
-										about which movies and TV Shows wotrh to watch next! Just for fun:)</p>
+										about which movies and TV Shows worth to watch next! Just for fun:)</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -117,7 +117,7 @@
 										using <strong>Matplotlib</strong> and <strong>Seaborn</strong>.
 										One of the aims of this project was to help the company to 
 										identify the relationsip of two variable using a scatter chart.
-										A presentation has been done in fromt of audience.
+										A presentation has been done in front of audience.
 									</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
