--- a/my_skills.html
+++ b/my_skills.html
@@ -111,7 +111,7 @@
 
 											<ul>
 												<li>Cantonese</li>
-												<li>Manderin</li>
+												<li>Mandarin</li>
 												<li>English</li>
 											</ul>
 									</dl>
