--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="#" class="button large"></a></li>
 								</ul>
 							</article>
 
