--- a/index.html
+++ b/index.html
@@ -58,12 +58,29 @@
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large"></a></li>
+									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">May 09, 2023</span>
+										<h2><a href="#">Data Analytics Project with
+											Tableau</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
+									<p>The Olympic Games are one of the world's largest and most prestigious sporting events, with a history dating back to 1896.
+										In this Dashbard, you will find some insights on how Olympic Games evolved in term of promoting the fairness and equality across gender and countries
+										over the years from 1896 to 2016.
+										<a href="https://public.tableau.com/app/profile/abby.poon/viz/HowOlympicGamePromoteFairnessandEqualityV2/Dashboard2">Click here</a> 
+										to go to my Tableau Public for more information!
+									</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">April 17, 2023</span>
